--- a/src/app/pages/attendance/transaction/compoffapply/attendance.compoffApply.html
+++ b/src/app/pages/attendance/transaction/compoffapply/attendance.compoffApply.html
@@ -12,7 +12,9 @@
             <div class="row">
                 <div class="form-group col-md-3">
                     <label for="inputPassword3">{{page.pageinfo.fields.EmpId.text}}</label>
-                    <field-box ng-column="page.pageinfo.fields.EmpId" ng-entity="entity" form="editForm"></field-box>
+                    <field-box ng-column="page.pageinfo.fields.EmpId" ng-entity="entity" form="editForm"
+                    fb-change="empChange(event, element, modelCtrl, column)"
+                    ></field-box>
                 </div>
                 <div class="form-group col-md-3">
                     <label for="inputPassword3">{{page.pageinfo.fields.COAttnDate.text}}</label>
