leave and master list

--- a/src/app/pages/leave/transaction/leaveapplication/leave.leaveapplication.html
+++ b/src/app/pages/leave/transaction/leaveapplication/leave.leaveapplication.html
@@ -50,7 +50,8 @@
                 </div>
                 <div class="form-group col-md-5 ">
                     <label for="inputPassword3 ">{{page.pageinfo.fields.LEADLTId.text}}</label>
-                    <field-box ng-column="page.pageinfo.fields.LEADLTId " ng-entity="entity " form="editForm "></field-box>
+                    <field-box ng-column="page.pageinfo.fields.LEADLTId "  ng-entity="entity "
+                        form="editForm "></field-box>
                 </div>
 
                 <div class="form-group col-md-1 ">
