--- a/src/app/pages/attendance/transaction/upload/attendance.upload.html
+++ b/src/app/pages/attendance/transaction/upload/attendance.upload.html
@@ -97,14 +97,12 @@
 
 
         </uib-tab>
-        <uib-tab heading="Import History">
+        <!--<uib-tab heading="Import History">
             <h3 class="with-line">Import History</h3>
             <grid-box ng-model="uploadHistory" box-options="boxSetting">
             </grid-box>
-            <!--<div id="grid5" ui-grid="tabCtrl.uploadHistory" class="djGrid" ui-grid-pagination ui-grid-edit ui-grid-cellnav
-                ui-grid-exporter>
-            </div>-->
-        </uib-tab>
+          
+        </uib-tab>-->
     </uib-tabset>
 </div>
 
