--- a/src/app/pages/organization/employees/templates/job/job-view.html
+++ b/src/app/pages/organization/employees/templates/job/job-view.html
@@ -1,4 +1,4 @@
-<form ng-submit="empTabCtrl.saveFormCommon()" name="editForm" novalidate>
+<form ng-submit="empTabCtrl.saveFormCommon(editForm)"  name="editForm" novalidate>
   <div class="panel panel-default bootstrap-panel xmedium-panel pnlScroll">
     <edit-panel-head page-title="page.pageinfo.title" 
     reset-form="empTabCtrl.resetFormCommon()" 
