--- a/src/app/common/components/fieldBox/fieldBox.html
+++ b/src/app/common/components/fieldBox/fieldBox.html
@@ -173,6 +173,7 @@
             }">
 
     </i>
+    <!--{{hasRequired()}}-->
     <!--info area-->
     <!--<span id="inputGroupSuccess1Status" class="sr-only">(success)</span>-->
     <!--<span ng-show="editForm[col.name]['$error']['blacklist']">
